--- a/index.css
+++ b/index.css
@@ -103,28 +103,26 @@ input[type="range"]::-webkit-slider-thumb {
 .values {
   background-color: #c0c0c0;
   width: 50%;
-  height: 1%;
+  height: 1em;
   position: relative;
   margin: auto;
-  padding: 10px 0;
-  border-radius: 5px;
+  padding: 0.4em 0;
+  border-radius: 1em;
   text-align: center;
-  font-weight: 500;
-  font-size: 25px;
+  font-size: 1.2vw;
   color: #ffffff;
 }
 /* showing the values of sliders*/
 .rangeRead {
   position: relative;
   color: #000;
-  font-size: 70%;
-  top: -17px;
+  top: -0.5em;
 }
 .rangeDash {
   position: relative;
   color: #000;
-  font-size: 70%;
-  top: -17px;
+  font-size: 1.2vw;
+  top: -0.6em;
 }
 
 .sort {
