--- a/index.css
+++ b/index.css
@@ -52,7 +52,6 @@ input[type="range"] {
   bottom: 0;
   left: 5%;
   background-color: transparent;
-  pointer-events: none;
 }
 
 #track1 {
@@ -84,7 +83,7 @@ input[type="range"]::-ms-track {
   appearance: none;
   height: 5%;
 }
-input[type="range"]::-webkit-slider-thumb {
+input[type="range"]::-webkit-slider-thumb , input[type="range"]::-moz-range-thumb {
   -webkit-appearance: none;
   height: 1.7vw;
   width: 1.7vw;
@@ -94,7 +93,7 @@ input[type="range"]::-webkit-slider-thumb {
   pointer-events: auto;
   border-radius: 50%;
 }
-input[type="range"]:active::-webkit-slider-thumb {
+input[type="range"]:active::-webkit-slider-thumb , input[type="range"]:active::-moz-range-thumb {
   background-color: #ffffff;
   /* border: 20px solid #3264fe; */
 }
